[tool.poetry]
name = "libmg"
version = "1.0.2"
description = ""
license = "MIT"
authors = ["Matteo Belenchia"]
readme = "README.md"
repository = "https://github.com/quasylab/mG"
documentation = "https://quasylab.github.io/mG/"

packages = [{include = "libmg"}]

[tool.poetry.dependencies]
python      = "~3.11"
tensorflow  = "~2.12"
spektral    = "~1.3"
numpy       = "*"
scipy       = "*"
bidict      = "*"
lark        = "^1"
pyvis       = "*"


[tool.poetry.group.test.dependencies]
pytest      = "*"
pytest-cov  = "*"
mypy        = "*"
flake8      = "*"
flake8-pyproject = "*"

[tool.poetry.group.docs.dependencies]
mkdocs      = "*"
mkdocstrings = "*"
mkdocs-material = "*"
mkdocs_gen_files = "*"
mkdocs-literate-nav = "*"
# mkdocks-section-index

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = '--doctest-modules --cov=libmg'
testpaths = ['libmg',]
doctest_optionflags = "ELLIPSIS"

[tool.mypy]
exclude = ["libmg/tests/"]
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.flake8]
max-line-length = 160
exclude = 'libmg\tests\'