[metadata]
name = libmg
description = libmg package
version = attr: libmg.__version__
author = Matteo Belenchia
license = MIT
license_files = ['LICENSE',]
platforms = win32
classifiers = Programming Language :: Python ::3.10

[options]
packages = libmg
install_requires =  lark
                    numpy
                    pyvis
                    scipy
                    spektral
                    tensorflow
                    tensorflow_addons
python_requires = >=3.10
package_dir = =sources

[options.extras_require]
testing =
            pytest
            pytest-cov
            mypy
            flake8
            tox

[options.package_data]
libmg = py.typed

[flake8]
max-line-length = 160